--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,9 @@
 conda_forge_output_validation: true
 bot:
   automerge: true
+  version_updates:
+    exclude:
+      - "4"
 github:
   branch_name: main
   tooling_branch_name: main
